syntax = "proto3";

option java_multiple_files = true;
package communication;

enum Role {
  GUEST = 0;
  HOST = 1;
}

message UserDetailsRequest {
  string username = 1;
}

message UserDetailsResponse {
  uint64 id = 1;
  string username = 2;
  string password = 3;
  Role role = 4;
  uint32 penalties = 5;
}

message RegistrationRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string username = 4;
  string password = 5;
  Role role = 6;
  string phoneNumber = 7;
}

message RegistrationResponse {
  string message = 1;
}